# KalmanFilter

./: .gitignore  README.md  generateDocumentation.sh
c++_implementation/: .gitignore  Makefile  README.md  front.md  install.sh
c++_implementation/examples/: README.md  basicExample.cpp  basicExampleBoost.cpp  basicExampleNonlinear.cpp  basicExampleSqrt.cpp  basicExampleSqrtBoost.cpp  sampleModel.h  sampleModelBoost.h
c++_implementation/include/: .gitignore  KalmanFilter.h  continuousDiscreteExtendedKalmanFilter.h  discreteDiscreteExtendedKalmanFilter.h  filterModel.h  model.h
c++_implementation/tests/: .gitignore  CMakeLists.txt  README.md  test.txt  tests.cpp  tests2.cpp  tests3.cpp  tests4.cpp
java_implementation/: Doxyfile  Function.java  FunctionLinear.java  Gaussian.java  KalmanFilter.java  Matrix.java  QR.java  TriangleSolve.java  front.md
java_implementation/examples/: python_verify.py  script.sh  test2.java
matlab_implementation/: .gitignore  Doxyfile  DoxygenLayout.xml  README.md  front.md  m2cpp.pl
matlab_implementation/continuous_continuous/: cckf.m  documentation.md  mRiccati.m
matlab_implementation/continuous_discrete/: cdekf.m  cdekf_predict_phase.m  cdekf_update_phase.m  documentation.md
matlab_implementation/cubature/: cubature.m  cubature_predict_phase.m  cubature_update_phase.m  documentation.md
matlab_implementation/discrete_discrete/: ddekf.m  ddekf_predict_phase.m  ddekf_update_phase.m  documentation.md
matlab_implementation/ensemble_discrete/: documentation.md
python_implementation/: .gitignore
(+53 files in other folders)
